--- a/templates/index.html
+++ b/templates/index.html
@@ -121,7 +121,8 @@
         }
 
         .form-row button.add-btn {
-            font-size: 0.75rem;
+            font-size: 0.875rem;
+            min-width: 70px;
         }
     </style>
 </head>
