--- a/templates/index.html
+++ b/templates/index.html
@@ -306,69 +306,49 @@
 </div>
 
 
+    <!-- JavaScript -->
+    <script>
+        document.getElementById('volume_slider').addEventListener('input', function () {
+            document.getElementById('volume_box').value = this.value;
+        });
+
+        document.getElementById('volume_box').addEventListener('input', function () {
+            document.getElementById('volume_slider').value = this.value;
+        });
+
+        document.getElementById('downloadFajrBtn').addEventListener('click', function () {
+            let fajrForm = document.getElementById('fajrUploadForm');
+            let fajrFile = document.getElementById('fajr_file').files[0];
+            let fajrUrl = document.getElementById('fajr_url').value;
+
+            if (fajrFile) {
+                fajrForm.submit(); // Direct upload
+            } else if (fajrUrl) {
+                fajrForm.action = '/download_fajr_from_youtube';
+                fajrForm.submit(); // Submit form with YouTube URL
+            } else {
+                alert('Please select a file or enter a YouTube URL.');
+            }
+        });
+
+        document.getElementById('downloadRegularBtn').addEventListener('click', function () {
+            let regularForm = document.getElementById('regularUploadForm');
+            let regularFile = document.getElementById('regular_file').files[0];
+            let regularUrl = document.getElementById('regular_url').value;
+
+            if (regularFile) {
+                regularForm.submit(); // Direct upload
+            } else if (regularUrl) {
+                regularForm.action = '/download_regular_from_youtube';
+                regularForm.submit(); // Submit form with YouTube URL
+            } else {
+                alert('Please select a file or enter a YouTube URL.');
+            }
+        });
+    </script>
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-    <script>
-        // Sync slider and input box
-        const slider = document.getElementById('volume_slider');
-        const box = document.getElementById('volume_box');
-
-        function updateVolume() {
-            const volume = slider.value;
-            fetch('/update_volume', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ volume: volume }),
-            }).then(response => response.json())
-              .then(data => {
-                  console.log('Volume updated:', data);
-              })
-              .catch(error => {
-                  console.error('Error updating volume:', error);
-              });
-        }
-        slider.addEventListener('input', function() {
-            box.value = slider.value;
-            updateVolume(); // Update volume automatically
-        });
-
-        box.addEventListener('input', function() {
-            slider.value = box.value;
-            updateVolume(); // Update volume automatically
-        });
-
-        //convert youtube to wav files
-        document.getElementById('downloadFajrBtn').onclick = function() {
-            const url = document.getElementById('fajr_url').value;  // Updated ID
-            fetch('/download_fajr', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/x-www-form-urlencoded',
-                },
-                body: new URLSearchParams({youtube_url: url}),
-            }).then(response => response.json()).then(data => {
-                alert(data.message);
-                $('#uploadFajrModal').modal('hide');  // Updated modal ID
-            });
-        };
-        
-        document.getElementById('downloadRegularBtn').onclick = function() {
-            const url = document.getElementById('regular_url').value;  // Updated ID
-            fetch('/download_regular', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/x-www-form-urlencoded',
-                },
-                body: new URLSearchParams({youtube_url: url}),
-            }).then(response => response.json()).then(data => {
-                alert(data.message);
-                $('#uploadRegularModal').modal('hide');  // Updated modal ID
-            });
-        };
-    </script>
 </body>
 
 </html>
