--- a/templates/index.html
+++ b/templates/index.html
@@ -327,6 +327,28 @@
     </div>
 </div>
 
+<!-- Confirm Remove Modal -->
+<div class="modal fade" id="confirmRemoveModal" tabindex="-1" aria-labelledby="confirmRemoveModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="confirmRemoveModalLabel">Remove Selected Athan?</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to remove the selected Athan? This action cannot be undone.
+            </div>
+            <div class="modal-footer text-center">
+                <form method="POST" action="/remove_athan">
+                    <input type="hidden" id="athan_to_remove" name="athan_to_remove" value="">
+                    <button type="submit" class="btn btn-danger">Remove</button>
+                </form>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <!-- JavaScript -->
     <script>
