--- a/templates/index.html
+++ b/templates/index.html
@@ -348,6 +348,7 @@
             <div class="modal-footer text-center">
                 <form method="POST" action="/remove_athan">
                     <input type="hidden" id="athan_to_remove" name="athan_to_remove" value="">
+                    <input type="hidden" id="audio_type" name="audio_type" value="">
                     <button type="submit" class="btn btn-danger">Remove</button>
                 </form>
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
@@ -355,6 +356,7 @@
         </div>
     </div>
 </div>
+
 
 
 <!-- JavaScript -->
