--- a/templates/index.html
+++ b/templates/index.html
@@ -113,6 +113,7 @@
         .form-row select {
             flex: 3;
             margin-right: 10px;
+            margin-left: 10px;
         }
 
         .form-row button {
@@ -123,12 +124,12 @@
         
         .remove-btn {
             font-size: 0.875rem;
-            min-width: 70px;
+            min-width: 50px;
         }
 
-        .form-row button.add-btn {
+        .add-btn {
             font-size: 0.875rem;
-            min-width: 70px;
+            min-width: 50px;
         }
 
         .modal-footer {
@@ -181,7 +182,7 @@
                     <label for="fajr_audio" class="form-label">Fajr Athan:</label>
                 </div>
                 <div class="form-row">
-                    <button type="button" class="btn btn-danger remove-btn" data-bs-toggle="modal" data-bs-target="#confirmRemoveModal" data-audio-type="fajr" style="margin-right: 10px;">Remove</button>
+                    <button type="button" class="btn btn-danger remove-btn" data-bs-toggle="modal" data-bs-target="#confirmRemoveModal" data-audio-type="fajr">Remove</button>
                     <select name="fajr_audio" class="form-select">
                         {% for file in fajr_athan_files %}
                         <option value="{{ file }}" {% if selected_fajr_athan == file %}selected{% endif %}>{{ file }}</option>
@@ -194,7 +195,7 @@
                     <label for="regular_audio" class="form-label">Regular Athan:</label>
                 </div>
                 <div class="form-row">
-                    <button type="button" class="btn btn-danger remove-btn" data-bs-toggle="modal" data-bs-target="#confirmRemoveModal" data-audio-type="regular" style="margin-right: 10px;">Remove</button>
+                    <button type="button" class="btn btn-danger remove-btn" data-bs-toggle="modal" data-bs-target="#confirmRemoveModal" data-audio-type="regular">Remove</button>
                     <select name="regular_audio" class="form-select">
                         {% for file in regular_athan_files %}
                         <option value="{{ file }}" {% if selected_regular_athan == file %}selected{% endif %}>{{ file }}</option>
