--- a/templates/index.html
+++ b/templates/index.html
@@ -111,7 +111,7 @@
         }
 
         .form-row select {
-            flex: 3;
+            flex: 5;
             margin-right: 10px;
             margin-left: 10px;
         }
@@ -119,17 +119,18 @@
         .form-row button {
             flex: 1;
             font-size: 0.8rem;
-            min-width: 50px;
+            padding: 8px;
+            min-width: 68px;
         }
         
         .remove-btn {
-            font-size: 0.875rem;
-            min-width: 50px;
+            font-size: 0.8rem;
+            min-width: 68px;
         }
 
         .add-btn {
-            font-size: 0.875rem;
-            min-width: 50px;
+            font-size: 0.8rem;
+            min-width: 68px;
         }
 
         .modal-footer {
